# nixcon-2024-player-template

./: CHANGELOG.md  LICENSE  flake.nix  garnix.yaml  nixcon-talk.cabal
app/: Main.hs
