cabal-version:      3.0
name:               nixcon-talk
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julian K. Arni
maintainer:         jkarni@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nixcon-talk
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      servant,
                      servant-server,
                      warp
    hs-source-dirs:   app
    default-language: Haskell2010
